src/test/testFiles/invalid/semanticErrors/incorrectArgTypeForPush.val
let x = Stack<number>();
let y = Stack<number>();
x.push(y);